[gd_scene load_steps=8 format=3 uid="uid://bf687ygbbfkao"]

[ext_resource type="Script" path="res://Scripts/Singleton/PauseMenu.gd" id="1_ko73d"]
[ext_resource type="Texture2D" uid="uid://clp03yenpwrkw" path="res://Resources/Kenney/Default/Border/panel-border-010.png" id="2_0pocy"]
[ext_resource type="LabelSettings" uid="uid://dijs6nmpg7l6s" path="res://Theme/Robot_white_64.tres" id="3_qm6mm"]
[ext_resource type="PackedScene" uid="uid://dovwega0a3tpe" path="res://Components/UI/general_button.tscn" id="4_du3lf"]
[ext_resource type="LabelSettings" uid="uid://5kwcugml2em4" path="res://Theme/Roboto_black_20.tres" id="5_ricur"]

[sub_resource type="Gradient" id="Gradient_lrivs"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.227451, 0.227451, 0.227451, 0.490196)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6v3er"]
gradient = SubResource("Gradient_lrivs")

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 90
visible = false
script = ExtResource("1_ko73d")

[node name="PauseUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="NinePatchRect" parent="PauseUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_6v3er")

[node name="Border" type="NinePatchRect" parent="PauseUI/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0pocy")
region_rect = Rect2(0.128063, 0, 47.8719, 48)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="Title" type="Label" parent="PauseUI/Background/Border"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 55.0
grow_horizontal = 2
text = "PAUSED"
label_settings = ExtResource("3_qm6mm")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseUI/Background/Border"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -76.0
offset_right = 225.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ContinueButton" parent="PauseUI/Background/Border/VBoxContainer" instance=ExtResource("4_du3lf")]
process_mode = 3
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="Label" type="Label" parent="PauseUI/Background/Border/VBoxContainer/ContinueButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 6.0
offset_right = -9.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "CONTINUE"
label_settings = ExtResource("5_ricur")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" parent="PauseUI/Background/Border/VBoxContainer" instance=ExtResource("4_du3lf")]
process_mode = 3
custom_minimum_size = Vector2(175, 50)
layout_mode = 2

[node name="Label" type="Label" parent="PauseUI/Background/Border/VBoxContainer/MainMenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 6.0
offset_right = -9.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "MAIN MENU"
label_settings = ExtResource("5_ricur")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="PauseUI/Background/Border/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="ExitButton" parent="PauseUI/Background/Border/VBoxContainer" instance=ExtResource("4_du3lf")]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="PauseUI/Background/Border/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 6.0
offset_right = -9.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "EXIT"
label_settings = ExtResource("5_ricur")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="is_selected" from="PauseUI/Background/Border/VBoxContainer/ContinueButton" to="." method="_on_continue_button_is_selected"]
[connection signal="is_selected" from="PauseUI/Background/Border/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_is_selected"]
[connection signal="is_selected" from="PauseUI/Background/Border/VBoxContainer/ExitButton" to="." method="_on_exit_button_is_selected"]
